# asymmetric-identity-certifier

./: Cargo.toml  LICENCE  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json
scripts/: deploy.mts  generate_did.sh  get-deploy-args.mts  get-key-pair.mts  test.mts
scripts/utils/: bytes-to-hex.ts  decrypt-certificate.ts  deploy-utils.ts  get-aes-key-from-input.ts  get-key-pair-from-input.ts  identity-from-seed.ts  validate-signature.ts
src/: asymmetric_identity_certifier.did  lib.rs
src/asymmetric-identity-certifier-backend/: Cargo.toml
src/declarations/: asymmetric_identity_certifier.did  asymmetric_identity_certifier.did.d.ts  asymmetric_identity_certifier.did.js  index.d.ts  index.js
