[package]
name = "asymmetric_identity_certifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.0"
ic-cdk-macros = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10.6"
# For ECDH and secp256k1 operations
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
# For AES encryption
aes = "0.8"
block-modes = "0.9"
block-padding = "0.3"